JP-8052: Added support on data purge for the ad-hoc groups